# ftva-etl

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
data/: language_map.json
src/clients/: alma_sru_client.py  filemaker_client.py
src/ftva_etl/: __init__.py
src/ftva_etl/clients/: alma_sru_client.py  digital_data_client.py  filemaker_client.py
src/ftva_etl/metadata/: digital_data.py  filemaker.py  mams_metadata.py  mams_metadata_ndm.py  marc.py  utils.py
src/ftva_etl/metadata/data/: language_map.json
tests/test_metadata/: test_digital_data.py  test_filemaker.py  test_marc.py  test_sru.py  test_utils.py
