[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Needed for the en_core_web_md reference in dependencies.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ftva_etl"]

[project]
name = "ftva_etl"
version = "0.1.3"
description = "UCLA FTVA MAMS ETL utilities"
readme = "README.md"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Python :: 3"]

# Add later? git+https://github.com/UCLALibrary/alma-api-client
dependencies = [
    'en_core_web_md@https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl',
    'pymarc==5.3.1',
    'python-dateutil==2.9.0',
    'python-fmrest==1.7.5',
    'requests==2.32.4',
    'spacy==3.8.7',
]

[project.urls]
Homepage = "https://github.com/UCLALibrary/ftva-etl"
